fix(editor): Dark mode switch style fix and other tweaks (no-changelog) (#7599)
Github issue / Community forum post (link here to close automatically):

--- a/packages/editor-ui/src/n8n-theme.scss
+++ b/packages/editor-ui/src/n8n-theme.scss
@@ -184,7 +184,6 @@
 // Dialog
 .el-overlay {
 	background-color: var(--color-dialog-overlay-background-dark);
-	backdrop-filter: blur(2px);
 }
 
 .el-dialog {
